plugins {
    id 'java'
    id 'org.springframework.boot' version '3.3.1'
    id 'io.spring.dependency-management' version '1.1.5'
}

group = 'com.bjcareer'
version = '0.0.1-SNAPSHOT'

java {
    toolchain {
        languageVersion = JavaLanguageVersion.of(21)
    }
}

configurations {
    compileOnly {
        extendsFrom annotationProcessor
    }
}

repositories {
    mavenCentral()
}

dependencies {
    implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
    implementation 'org.springframework.boot:spring-boot-starter-web'
    implementation 'org.springframework:spring-webflux:6.1.13'
    implementation 'org.redisson:redisson-spring-boot-starter:3.33.0'
    compileOnly 'org.projectlombok:lombok'
    runtimeOnly 'org.postgresql:postgresql'
    annotationProcessor 'org.projectlombok:lombok'
    testImplementation 'org.springframework.boot:spring-boot-starter-test'
    testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
    implementation 'org.apache.commons:commons-csv:1.8'
    testImplementation 'org.mockito:mockito-core:5.12.0'
    implementation 'io.awspring.cloud:spring-cloud-aws-starter-s3:3.0.0'
    implementation 'io.awspring.cloud:spring-cloud-aws-starter-secrets-manager:3.0.0'
    implementation 'com.fasterxml.jackson.datatype:jackson-datatype-jdk8'

    implementation 'com.h2database:h2'
    implementation 'org.springframework.boot:spring-boot-starter-validation'

    //parsing html
    implementation 'org.jsoup:jsoup:1.15.4'

    // https://mvnrepository.com/artifact/org.mongodb/mongodb-driver-sync
    implementation 'org.mongodb:mongodb-driver-sync:5.1.3'
    // https://mvnrepository.com/artifact/org.springframework.boot/spring-boot-starter-data-mongodb
    implementation 'org.springframework.boot:spring-boot-starter-data-mongodb:3.3.2'

    implementation 'io.micrometer:micrometer-registry-prometheus'
    implementation 'org.springframework.boot:spring-boot-starter-actuator'

    //swagger
    implementation 'org.springdoc:springdoc-openapi-starter-webmvc-ui:2.2.0'
    implementation 'io.hypersistence:hypersistence-utils-hibernate-60:3.2.0'


}

tasks.named('test') {
    useJUnitPlatform()
}
